--- a/spa/package.json
+++ b/spa/package.json
@@ -17,6 +17,7 @@
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-typescript": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "firebase-tools": "^7.10.0",
     "typescript": "~3.5.3",
     "vue-template-compiler": "^2.6.10"
   }
